# rust-spa-example

./: .env  .eslintignore  .eslintrc  .gitignore  Caddyfile  Cargo.toml  Dockerfile  Justfile  README.md  build.rs  package.json  pnpm-lock.yaml  tailwind.config.cjs  tsconfig.json  vite.config.ts
app/: main.tsx
app/components/: NavBar.tsx
app/lib/: api.ts
app/pages/: about.tsx  index.tsx  post.tsx
db/migrations/: 20230306144739_create_posts.sql
src/: main.rs  manifest.rs
templates/: index.html
