[package]
name = "rust-spa-example"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
anyhow = "1.0.69"
argh = "0.1.10"
askama = { version = "0.12.0", features = ["with-axum"] }
askama_axum = "0.3.0"
axum = { version = "0.6.10", features = ["macros"] }
once_cell = "1.17.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
sqlx = { version = "0.6.2", features = ["sqlite", "runtime-tokio-rustls", "macros", "migrate"] }
tokio = { version = "1.26.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["fs"] }

[build-dependencies]
quote = "1.0.23"
